# homework_numerical_analysis

./: README.MD  requirement.txt
hw1/src/: integrator.py  main.py  mpmath_result.py  plotter.py  scipy_result.py
hw2/: CMakeLists.txt
hw2/include/: cubic_spline.h
hw2/src/: cubic_spline.cpp  main.cpp  plot.py  question4.py
hw2/tests/: test_cubic_spline.cpp
hw3/: CMakeLists.txt
hw3/include/: Matrix.h  SystemEquation.h
hw3/include/solver/: LUSolver.h  SORSolver.h
hw3/src/: Matrix.cpp  SystemEquation.cpp  main.cpp  main.py  plotter.py  runge_kutta.py
hw3/src/solver/: SORSolver.cpp
hw4/include/: SystemEquation.h
hw4/include/solver/: LinearSolverBase.h
hw4/src/: main.cpp  true_result.py
hw4/src/solver/: LUSolver.cpp  SORSolver.cpp
